cl/gramaticaParser.py
# Generated from gramatica.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'+'", "'#'", "'!'", "'('", "')'", 
                     "':='", "'print'", "'area'", "'perimeter'", "'vertices'", 
                     "'centroid'", "'color'", "','", "'{'", "'}'", "'inside'", 
                     "'equal'", "'regular'", "'draw'", "'True'", "'False'", 
                     "'>'", "'<'", "'=='", "'!='", "'>='", "'<='", "'if'", 
                     "'elif'", "'endif'", "'else'", "'['", "']'", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUM", "LLETRA", "S", "Comment", "WS", "WORD" ]

    RULE_root = 0
    RULE_expressions = 1
    RULE_expr = 2
    RULE_op = 3
    RULE_assign = 4
    RULE_printi = 5
    RULE_printx = 6
    RULE_area = 7
    RULE_perimeter = 8
    RULE_vertices = 9
    RULE_centroid = 10
    RULE_color = 11
    RULE_inside = 12
    RULE_equal = 13
    RULE_regular = 14
    RULE_draw = 15
    RULE_condicio = 16
    RULE_condicional = 17
    RULE_llista = 18
    RULE_point = 19
    RULE_ide = 20

    ruleNames =  [ "root", "expressions", "expr", "op", "assign", "printi", 
                   "printx", "area", "perimeter", "vertices", "centroid", 
                   "color", "inside", "equal", "regular", "draw", "condicio", 
                   "condicional", "llista", "point", "ide" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    NUM=36
    LLETRA=37
    S=38
    Comment=39
    WS=40
    WORD=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressions(self):
            return self.getTypedRuleContext(gramaticaParser.ExpressionsContext,0)


        def EOF(self):
            return self.getToken(gramaticaParser.EOF, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = gramaticaParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.expressions()
            self.state = 43
            self.match(gramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ExprContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ExprContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_expressions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressions" ):
                return visitor.visitExpressions(self)
            else:
                return visitor.visitChildren(self)




    def expressions(self):

        localctx = gramaticaParser.ExpressionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expressions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 45
                self.expr()
                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << gramaticaParser.T__7) | (1 << gramaticaParser.T__8) | (1 << gramaticaParser.T__9) | (1 << gramaticaParser.T__10) | (1 << gramaticaParser.T__11) | (1 << gramaticaParser.T__12) | (1 << gramaticaParser.T__16) | (1 << gramaticaParser.T__17) | (1 << gramaticaParser.T__18) | (1 << gramaticaParser.T__19) | (1 << gramaticaParser.T__28) | (1 << gramaticaParser.LLETRA))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(gramaticaParser.AssignContext,0)


        def printi(self):
            return self.getTypedRuleContext(gramaticaParser.PrintiContext,0)


        def printx(self):
            return self.getTypedRuleContext(gramaticaParser.PrintxContext,0)


        def area(self):
            return self.getTypedRuleContext(gramaticaParser.AreaContext,0)


        def perimeter(self):
            return self.getTypedRuleContext(gramaticaParser.PerimeterContext,0)


        def vertices(self):
            return self.getTypedRuleContext(gramaticaParser.VerticesContext,0)


        def centroid(self):
            return self.getTypedRuleContext(gramaticaParser.CentroidContext,0)


        def color(self):
            return self.getTypedRuleContext(gramaticaParser.ColorContext,0)


        def inside(self):
            return self.getTypedRuleContext(gramaticaParser.InsideContext,0)


        def equal(self):
            return self.getTypedRuleContext(gramaticaParser.EqualContext,0)


        def regular(self):
            return self.getTypedRuleContext(gramaticaParser.RegularContext,0)


        def draw(self):
            return self.getTypedRuleContext(gramaticaParser.DrawContext,0)


        def condicional(self):
            return self.getTypedRuleContext(gramaticaParser.CondicionalContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = gramaticaParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.printi()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.printx()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.area()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.perimeter()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 55
                self.vertices()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 56
                self.centroid()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 57
                self.color()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 58
                self.inside()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 59
                self.equal()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 60
                self.regular()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 61
                self.draw()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 62
                self.condicional()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ide(self):
            return self.getTypedRuleContext(gramaticaParser.IdeContext,0)


        def llista(self):
            return self.getTypedRuleContext(gramaticaParser.LlistaContext,0)


        def op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.OpContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.OpContext,i)


        def NUM(self):
            return self.getToken(gramaticaParser.NUM, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp" ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)



    def op(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = gramaticaParser.OpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_op, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [gramaticaParser.LLETRA]:
                self.state = 66
                self.ide()
                pass
            elif token in [gramaticaParser.T__32]:
                self.state = 67
                self.llista()
                pass
            elif token in [gramaticaParser.T__2]:
                self.state = 68
                self.match(gramaticaParser.T__2)
                self.state = 69
                self.op(3)
                pass
            elif token in [gramaticaParser.T__3]:
                self.state = 70
                self.match(gramaticaParser.T__3)
                self.state = 71
                self.match(gramaticaParser.NUM)
                pass
            elif token in [gramaticaParser.T__4]:
                self.state = 72
                self.match(gramaticaParser.T__4)
                self.state = 73
                self.op(0)
                self.state = 74
                self.match(gramaticaParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 86
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 84
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = gramaticaParser.OpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_op)
                        self.state = 78
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 79
                        self.match(gramaticaParser.T__0)
                        self.state = 80
                        self.op(6)
                        pass

                    elif la_ == 2:
                        localctx = gramaticaParser.OpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_op)
                        self.state = 81
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 82
                        self.match(gramaticaParser.T__1)
                        self.state = 83
                        self.op(5)
                        pass

             
                self.state = 88
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ide(self):
            return self.getTypedRuleContext(gramaticaParser.IdeContext,0)


        def op(self):
            return self.getTypedRuleContext(gramaticaParser.OpContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = gramaticaParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.ide()
            self.state = 90
            self.match(gramaticaParser.T__6)
            self.state = 91
            self.op(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintiContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op(self):
            return self.getTypedRuleContext(gramaticaParser.OpContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_printi

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrinti" ):
                return visitor.visitPrinti(self)
            else:
                return visitor.visitChildren(self)




    def printi(self):

        localctx = gramaticaParser.PrintiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_printi)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(gramaticaParser.T__7)
            self.state = 94
            self.op(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintxContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def S(self):
            return self.getToken(gramaticaParser.S, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_printx

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintx" ):
                return visitor.visitPrintx(self)
            else:
                return visitor.visitChildren(self)




    def printx(self):

        localctx = gramaticaParser.PrintxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_printx)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(gramaticaParser.T__7)
            self.state = 97
            self.match(gramaticaParser.S)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AreaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op(self):
            return self.getTypedRuleContext(gramaticaParser.OpContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_area

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArea" ):
                return visitor.visitArea(self)
            else:
                return visitor.visitChildren(self)




    def area(self):

        localctx = gramaticaParser.AreaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_area)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(gramaticaParser.T__8)
            self.state = 100
            self.op(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PerimeterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op(self):
            return self.getTypedRuleContext(gramaticaParser.OpContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_perimeter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPerimeter" ):
                return visitor.visitPerimeter(self)
            else:
                return visitor.visitChildren(self)




    def perimeter(self):

        localctx = gramaticaParser.PerimeterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_perimeter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(gramaticaParser.T__9)
            self.state = 103
            self.op(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerticesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op(self):
            return self.getTypedRuleContext(gramaticaParser.OpContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_vertices

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVertices" ):
                return visitor.visitVertices(self)
            else:
                return visitor.visitChildren(self)




    def vertices(self):

        localctx = gramaticaParser.VerticesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vertices)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(gramaticaParser.T__10)
            self.state = 106
            self.op(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CentroidContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op(self):
            return self.getTypedRuleContext(gramaticaParser.OpContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_centroid

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCentroid" ):
                return visitor.visitCentroid(self)
            else:
                return visitor.visitChildren(self)




    def centroid(self):

        localctx = gramaticaParser.CentroidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_centroid)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(gramaticaParser.T__11)
            self.state = 109
            self.op(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ide(self):
            return self.getTypedRuleContext(gramaticaParser.IdeContext,0)


        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.NUM)
            else:
                return self.getToken(gramaticaParser.NUM, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_color

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColor" ):
                return visitor.visitColor(self)
            else:
                return visitor.visitChildren(self)




    def color(self):

        localctx = gramaticaParser.ColorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_color)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(gramaticaParser.T__12)
            self.state = 112
            self.ide()
            self.state = 113
            self.match(gramaticaParser.T__13)
            self.state = 114
            self.match(gramaticaParser.T__14)
            self.state = 115
            self.match(gramaticaParser.NUM)
            self.state = 116
            self.match(gramaticaParser.NUM)
            self.state = 117
            self.match(gramaticaParser.NUM)
            self.state = 118
            self.match(gramaticaParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsideContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.OpContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.OpContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_inside

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInside" ):
                return visitor.visitInside(self)
            else:
                return visitor.visitChildren(self)




    def inside(self):

        localctx = gramaticaParser.InsideContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_inside)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(gramaticaParser.T__16)
            self.state = 121
            self.op(0)
            self.state = 122
            self.match(gramaticaParser.T__13)
            self.state = 123
            self.op(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.OpContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.OpContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_equal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqual" ):
                return visitor.visitEqual(self)
            else:
                return visitor.visitChildren(self)




    def equal(self):

        localctx = gramaticaParser.EqualContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_equal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(gramaticaParser.T__17)
            self.state = 126
            self.op(0)
            self.state = 127
            self.match(gramaticaParser.T__13)
            self.state = 128
            self.op(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegularContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def op(self):
            return self.getTypedRuleContext(gramaticaParser.OpContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_regular

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegular" ):
                return visitor.visitRegular(self)
            else:
                return visitor.visitChildren(self)




    def regular(self):

        localctx = gramaticaParser.RegularContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_regular)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(gramaticaParser.T__18)
            self.state = 131
            self.op(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DrawContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def S(self):
            return self.getToken(gramaticaParser.S, 0)

        def op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.OpContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.OpContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_draw

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDraw" ):
                return visitor.visitDraw(self)
            else:
                return visitor.visitChildren(self)




    def draw(self):

        localctx = gramaticaParser.DrawContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_draw)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(gramaticaParser.T__19)
            self.state = 134
            self.match(gramaticaParser.S)
            self.state = 137 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 135
                self.match(gramaticaParser.T__13)
                self.state = 136
                self.op(0)
                self.state = 139 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==gramaticaParser.T__13):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.NUM)
            else:
                return self.getToken(gramaticaParser.NUM, i)

        def getRuleIndex(self):
            return gramaticaParser.RULE_condicio

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicio" ):
                return visitor.visitCondicio(self)
            else:
                return visitor.visitChildren(self)




    def condicio(self):

        localctx = gramaticaParser.CondicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_condicio)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(gramaticaParser.T__20)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(gramaticaParser.T__21)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.match(gramaticaParser.NUM)
                self.state = 144
                self.match(gramaticaParser.T__22)
                self.state = 145
                self.match(gramaticaParser.NUM)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.match(gramaticaParser.NUM)
                self.state = 147
                self.match(gramaticaParser.T__23)
                self.state = 148
                self.match(gramaticaParser.NUM)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 149
                self.match(gramaticaParser.NUM)
                self.state = 150
                self.match(gramaticaParser.T__24)
                self.state = 151
                self.match(gramaticaParser.NUM)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 152
                self.match(gramaticaParser.NUM)
                self.state = 153
                self.match(gramaticaParser.T__25)
                self.state = 154
                self.match(gramaticaParser.NUM)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 155
                self.match(gramaticaParser.NUM)
                self.state = 156
                self.match(gramaticaParser.T__26)
                self.state = 157
                self.match(gramaticaParser.NUM)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 158
                self.match(gramaticaParser.NUM)
                self.state = 159
                self.match(gramaticaParser.T__27)
                self.state = 160
                self.match(gramaticaParser.NUM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.CondicioContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.CondicioContext,i)


        def expressions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.ExpressionsContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.ExpressionsContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_condicional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = gramaticaParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.match(gramaticaParser.T__28)
                self.state = 164
                self.condicio()
                self.state = 165
                self.expressions()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==gramaticaParser.T__29:
                    self.state = 166
                    self.match(gramaticaParser.T__29)
                    self.state = 167
                    self.condicio()
                    self.state = 168
                    self.expressions()
                    self.state = 174
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 175
                self.match(gramaticaParser.T__30)
                pass
